# pluginmarket

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  release.yml
public/: 404.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/docs/: 目录.md
src/assets/docs/config/: 世界管理.md  性能优化.md  权限管理.md
src/assets/docs/core/: arclight.md  banner.md  bungeecord.md  catserver.md  fabric.md  folia.md  forge.md  geyser.md  leaves.md  mohist.md  neoforge.md  paper.md  pufferfish.md  purpur.md  quilt.md  spigot.md  velocity.md  服务端选择指南.md
src/assets/docs/core/config/bukkit-yml/: 世界与别名.md  区块与存档.md  基础设置.md  完整示例.md  概述.md  生物生成.md
src/assets/docs/faq/: 常见问题.md
src/assets/docs/java/: JVM启动参数.md  Java环境配置.md
src/assets/docs/mods/: 模组推荐.md
src/assets/docs/network/: 01-概述与前置知识.md  02-IPv4公网开服.md  03-IPv6公网开服.md  04-云服务器开服.md  05-域名绑定与安全.md  FRP内网穿透.md  P2P联机.md
src/assets/docs/ops/: Linux运维.md  Windows运维.md  备份与恢复.md  安全防护.md
src/assets/docs/plugins/: 反作弊.md  插件推荐.md
src/components/: AskAIPanel.tsx  DocsSearch.tsx  Header.tsx  PlatformIcons.tsx  PlatformToggle.tsx  PluginCard.tsx  SearchBar.tsx
src/pages/: AuthorPage.tsx  DocsPage.tsx  FavoritesPage.tsx  GuidePage.tsx  MainPage.tsx  PluginDetailPage.tsx  SettingsPage.tsx
src/services/: ai.ts  api-base.ts  hangar.ts  modrinth.ts  search.ts  spiget.ts
src/store/: index.ts
src/types/: index.ts
(+27 files in other folders)
